--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "ghost-cursor": "^1.1.1",
     "node-temp-mail": "^1.0.2",
     "puppeteer": "latest",
     "puppeteer-extra": "latest",
